--- a/fno.yml
+++ b/fno.yml
@@ -239,7 +239,7 @@ dependencies:
       - markdown-it-py==3.0.0
       - mdurl==0.1.2
       - mypy-extensions==1.0.0
-      - neuraloperator==0.2.1
+      # - neuraloperator==0.2.1
       - nose==1.3.7
       - numcodecs==0.12.1
       - opt-einsum==3.3.0
